--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "categories": [
         "Snippets"
     ],
+    "keywords": [
+        "Drupal",
+        "PHP",
+        "Snippets"
+    ],
     "contributes": {
         "snippets": [
             {
