--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "Context-aware snippets for Drupal development",
     "version": "1.1.0",
     "publisher": "andrewdavidblum",
+    "type": "module",
     "repository": {
         "type": "git",
         "url": "https://github.com/andy-blum/smart-drupal-snippets"
