feat: add drupal 9/10 tags

--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     ],
     "keywords": [
         "Drupal",
+        "Drupal-9",
+        "Drupal-10",
         "PHP",
         "Snippets"
     ],
