--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
             {
                 "language": "php",
                 "path": "./snippets/hooks.json"
+            },
+            {
+                "language": "php",
+                "path": "./snippets/elements.json"
             }
         ],
         "languages": [
