--- a/package.json
+++ b/package.json
@@ -49,10 +49,10 @@
     },
     "dependencies": {
         "del": "^6.1.1",
-        "docblock": "^0.4.5",
         "download": "^8.0.0",
         "find": "^0.3.0",
         "he": "^1.2.0",
+        "php-parser": "^3.1.4",
         "tar": "^6.1.11",
         "write-json-file": "^4.3.0"
     },
