Refactor scrape_elements.js base on index.js

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,7 +17,7 @@
             "type": "node",
             "name": "Debug JavaScript file",
             "request": "launch",
-            "program": "${workspaceFolder}/scrape_elements.js",
+            "program": "${workspaceFolder}/index.js",
             "runtimeExecutable": "node",
             "console": "integratedTerminal",
             "internalConsoleOptions": "neverOpen",
