feat: add Drupal form & render element snippets (#16)

--- a/package.json
+++ b/package.json
@@ -32,6 +32,10 @@
             {
                 "language": "php",
                 "path": "./snippets/hooks.json"
+            },
+            {
+                "language": "php",
+                "path": "./snippets/elements.json"
             }
         ],
         "languages": [
