--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
         "he": "^1.2.0",
         "php-parser": "^3.1.4",
         "tar": "^6.1.11",
-        "write-json-file": "^4.3.0"
+        "write-json-file": "^4.3.0",
+        "yaml": "^2.2.1"
     },
     "scripts": {
         "start": "node index.js",
